--- a/src/index.html
+++ b/src/index.html
@@ -6,15 +6,15 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="stylesheet" href="./bootstrap.css" />
-    <link rel="icon" href="icon.png" />
+    <link rel="stylesheet" href="../style/bootstrap.css" />
+    <link rel="icon" href="../icon.ico" />
     <title>Bala Notes</title>
   </head>
 
   <body>
     <nav class="navbar sticky-top navbar-dark bg-primary">
       <a class="navbar-brand">
-        <h3><img src="icon.png" alt="Logo" width="50" /> Bala Notes</h3>
+        <h3><img src="../icon.ico" alt="Logo" width="50" /> Bala Notes</h3>
       </a>
       <form class="form-inline">
         <input
@@ -24,13 +24,6 @@
           placeholder="Search"
           aria-label="Search"
         />
-        <button
-          id="search"
-          class="btn btn-outline-light my-2 my-sm-0"
-          type="submit"
-        >
-          Search
-        </button>
       </form>
     </nav>
     <div class="container my-4">
@@ -68,5 +61,5 @@
       <div id="notes" class="row container-fluid"></div>
     </div>
   </body>
-  <script src="notes.js"></script>
+  <script src="./notes.js"></script>
 </html>
