fixed search bar, compact notes

--- a/src/index.html
+++ b/src/index.html
@@ -7,26 +7,23 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <link rel="stylesheet" href="../style/tailwind.css" />
-    <link rel="stylesheet" href="../style/styles.css" />
     <link rel="icon" href="../icon.ico" />
     <title>Bala Notes</title>
   </head>
 
   <body style="background-color: rgb(0, 0, 110)" class="text-white">
-    <nav class="myNav">
+    <nav style="background-color: rgb(0, 0, 110)" class="myNav">
       <ul>
         <li class="pt-2 pl-4">
           <img style="float: left" src="../icon.ico" alt="Logo" width="50" />
-          <h3
-            class="font-bold pl-3"
-            style=" float: left; font-size: 2.3rem"
-          >
+          <h3 class="font-bold pl-3" style="float: left; font-size: 2.3rem">
             Bala Notes
           </h3>
         </li>
         <li style="float: right; padding-right: 10px; padding-top: 5px">
           <form class="pt-2">
             <input
+              style="width: 15rem"
               class="rounded-xl search"
               id="search_text"
               type="search"
@@ -40,7 +37,9 @@
     <div class="pr-60 pl-60 py-3">
       <h1 id="welcome"></h1>
       <br />
-      <div class="rounded-2xl bg-gradient-to-r from-purple-600 to-red-600 text-white">
+      <div
+        class="rounded-2xl bg-gradient-to-r from-purple-600 to-red-600 text-white"
+      >
         <div class="p-6">
           <div>
             <h5 class="text-2xl pb-3 font-semibold">Title</h5>
