--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,14 @@
     <div>
       <div>
         <div
-          class="bg-gradient-to-b dark:text-blue-200 dark:from-blue-700 dark:to-blue-background from-gray-400 to-white"
+          class="
+            bg-gradient-to-b
+            dark:text-blue-200
+            dark:from-blue-700
+            dark:to-blue-background
+            from-gray-400
+            to-white
+          "
         >
           <header class="flex justify-end">
             <div class="pl-3 pr-3 hover:bg-blue-800 pt-2 pb-2" id="min">
@@ -112,7 +119,14 @@
       <h1 id="welcome"></h1>
       <br />
       <div
-        class="rounded-2xl dark:from-indigo-900 dark:to-purple-900 bg-gradient-to-tl from-purple-600 to-pink-600"
+        class="
+          rounded-2xl
+          dark:from-indigo-900
+          dark:to-purple-900
+          bg-gradient-to-tl
+          from-purple-600
+          to-pink-600
+        "
       >
         <div class="p-6">
           <div>
@@ -138,13 +152,31 @@
           </div>
           <span>
             <button
-              class="font-semibold hover:shadow-xl bg-gray-300 hover:bg-gray-100 dark:hover:bg-blue-900 dark:bg-blue-700 p-3 rounded-lg"
+              class="
+                font-semibold
+                hover:shadow-xl
+                bg-gray-300
+                hover:bg-gray-100
+                dark:hover:bg-blue-900
+                dark:bg-blue-700
+                p-3
+                rounded-lg
+              "
               id="add"
             >
               Add Note
             </button>
             <button
-              class="font-semibold hover:shadow-xl bg-red-600 hover:bg-red-500 dark:hover:bg-red-900 dark:bg-red-700 p-3 rounded-lg"
+              class="
+                font-semibold
+                hover:shadow-xl
+                bg-red-600
+                hover:bg-red-500
+                dark:hover:bg-red-900
+                dark:bg-red-700
+                p-3
+                rounded-lg
+              "
               id="clear"
             >
               Clear Notes
