--- a/src/index.html
+++ b/src/index.html
@@ -1,158 +1,97 @@
 <!DOCTYPE html>
 <html lang="en" class="" id="html">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <link rel="stylesheet" href="../style/tailwind.css" />
-    <link rel="icon" href="../icon.ico" />
-    <script defer src="./window.js"></script>
-    <title>Bala Notes</title>
-  </head>
 
-  <body class="dark:text-blue-200 dark:dark-blue-background">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <link rel="stylesheet" href="../style/tailwind.css" />
+  <link rel="icon" href="../icon.ico" />
+  <script defer src="./window.js"></script>
+  <title>Bala Notes</title>
+</head>
+
+<body class="dark:text-blue-200 dark:dark-blue-background">
+  <div>
     <div>
-      <div>
-        <div
-          class="
+      <div class="
             bg-gradient-to-b
             dark:text-blue-200
             dark:from-blue-700
             dark:to-blue-background
             from-gray-400
             to-white
-          "
-        >
-          <header class="flex justify-end">
-            <div class="pl-3 pr-3 hover:bg-blue-800 pt-2 pb-2" id="min">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                class="h-6 w-6"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke="currentColor"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M18 12H6"
-                />
-              </svg>
-            </div>
-            <div class="transform pt-2 pb-2 pl-3 pr-3" id="max">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                class="h-6 w-6 text-gray-500"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke="currentColor"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z"
-                />
-              </svg>
-            </div>
-            <div class="pt-2 pb-2 hover:bg-red-600 pl-3 pr-3" id="close">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                class="h-6 w-6"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke="currentColor"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M6 18L18 6M6 6l12 12"
-                />
-              </svg>
-            </div>
-          </header>
+          ">
+        <header class="flex justify-end">
+          <div class="pl-3 pr-3 hover:bg-blue-800 pt-2 pb-2" id="min">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+              stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18 12H6" />
+            </svg>
+          </div>
+          <div class="transform pt-2 pb-2 pl-3 pr-3" id="max">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-500" fill="none" viewBox="0 0 24 24"
+              stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z" />
+            </svg>
+          </div>
+          <div class="pt-2 pb-2 hover:bg-red-600 pl-3 pr-3" id="close">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+              stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+            </svg>
+          </div>
+        </header>
+      </div>
+    </div>
+    <nav class="myNav dark:dark-blue-background bg-white">
+      <div class="pt-3 flex justify-between">
+        <div class="pl-4">
+          <img src="../icon.ico" alt="Logo" width="50" />
+        </div>
+        <h3 class="font-bold pl-5 text-4xl">Bala Notes</h3>
+        <div class="pr-4 align-middle">
+          <form class="inline-block pr-3">
+            <input style="width: 15rem" class="rounded-xl search dark:bg-gray-600 dark:text-blue-200" id="search_text"
+              type="search" placeholder="Search" aria-label="Search" />
+          </form>
+          <div class="inline-block">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 pt-2" fill="none" id="theme" viewBox="0 0 24 24"
+              stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z" />
+            </svg>
+          </div>
         </div>
       </div>
-      <nav class="myNav dark:dark-blue-background bg-white">
-        <div class="pt-3 flex justify-between">
-          <div class="pl-4">
-            <img src="../icon.ico" alt="Logo" width="50" />
-          </div>
-          <h3 class="font-bold pl-5 text-4xl">Bala Notes</h3>
-          <div class="pr-4 align-middle">
-            <form class="inline-block pr-3">
-              <input
-                style="width: 15rem"
-                class="rounded-xl search dark:bg-gray-600 dark:text-blue-200"
-                id="search_text"
-                type="search"
-                placeholder="Search"
-                aria-label="Search"
-              />
-            </form>
-            <div class="inline-block">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                class="h-6 w-6 pt-2"
-                fill="none"
-                id="theme"
-                viewBox="0 0 24 24"
-                stroke="currentColor"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"
-                />
-              </svg>
-            </div>
-          </div>
-        </div>
-      </nav>
-    </div>
-    <div class="pr-60 pl-60 py-3">
-      <h1 id="welcome"></h1>
-      <br />
-      <div
-        class="
+    </nav>
+  </div>
+  <div class="pr-60 pl-60 py-3">
+    <h1 id="welcome"></h1>
+    <br />
+    <div class="
           rounded-2xl
           dark:from-indigo-900
           dark:to-purple-900
           bg-gradient-to-tl
           from-purple-600
           to-pink-600
-        "
-      >
-        <div class="p-6">
-          <div>
-            <h5 class="text-2xl pb-3 font-semibold">Title</h5>
-            <input
-              type="text"
-              class="search dark:bg-gray-600 dark:text-blue-200"
-              id="title"
-              placeholder="Add a catchy title to your note"
-            />
+        ">
+      <div class="p-6">
+        <div>
+          <h5 class="text-2xl pb-3 font-semibold">Title</h5>
+          <input type="text" class="search dark:bg-gray-600 dark:text-blue-200" id="title"
+            placeholder="Add a catchy title to your note" />
+        </div>
+        <div class="pt-6">
+          <h5 class="font-semibold text-2xl pb-3">Description</h5>
+          <div class="pb-4">
+            <textarea class="search dark:bg-gray-600 dark:text-blue-200" style="height: 100px" id="text" rows="3"
+              placeholder="Add a description to your note (optional)"></textarea>
           </div>
-          <div class="pt-6">
-            <h5 class="font-semibold text-2xl pb-3">Description</h5>
-            <div class="pb-4">
-              <textarea
-                class="search dark:bg-gray-600 dark:text-blue-200"
-                style="height: 100px"
-                id="text"
-                rows="3"
-                placeholder="Add a description to your note (optional)"
-              ></textarea>
-            </div>
-          </div>
-          <span>
-            <button
-              class="
+        </div>
+        <span>
+          <button class="
                 font-semibold
                 hover:shadow-xl
                 bg-gray-300
@@ -161,13 +100,10 @@
                 dark:bg-blue-700
                 p-3
                 rounded-lg
-              "
-              id="add"
-            >
-              Add Note
-            </button>
-            <button
-              class="
+              " id="add">
+            Add Note
+          </button>
+          <button class="
                 font-semibold
                 hover:shadow-xl
                 bg-red-600
@@ -176,18 +112,17 @@
                 dark:bg-red-700
                 p-3
                 rounded-lg
-              "
-              id="clear"
-            >
-              Clear Notes
-            </button>
-          </span>
-        </div>
+              " id="clear">
+            Clear Notes
+          </button>
+        </span>
       </div>
-      <br />
-      <h2 class="font-bold text-3xl pb-2">Notes</h2>
-      <div id="notes" class="fill-row text-xl"></div>
     </div>
-  </body>
-  <script src="./notes.js"></script>
+    <br />
+    <h2 class="font-bold text-3xl pb-2">Notes</h2>
+    <div id="notes" class="fill-row text-xl"></div>
+  </div>
+</body>
+<script src="./notes.js"></script>
+
 </html>
