--- a/src/index.html
+++ b/src/index.html
@@ -11,18 +11,11 @@
 </head>
 
 <body class="dark:text-blue-200 dark:dark-blue-background">
-  <div>
+  <div class="bg-gradient-to-b dark:from-blue-700 dark:to-blue-background from-gray-400 to-white">
     <div>
-      <div class="
-            bg-gradient-to-b
-            dark:text-blue-200
-            dark:from-blue-700
-            dark:to-blue-background
-            from-gray-400
-            to-white
-          ">
+      <div class="dark:text-blue-200">
         <header class="flex justify-end">
-          <div class="pl-3 pr-3 hover:bg-blue-800 pt-2 pb-2" id="min">
+          <div class="pl-3 pr-3 hover:bg-blue-600 pt-2 pb-2" id="min">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
               stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18 12H6" />
@@ -44,7 +37,7 @@
         </header>
       </div>
     </div>
-    <nav class="myNav dark:dark-blue-background bg-white">
+    <nav class="myNav">
       <div class="pt-3 flex justify-between">
         <div class="pl-4">
           <img src="../icon.ico" alt="Logo" width="50" />
