--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,20 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <link rel="stylesheet" href="../style/tailwind.css" />
+  <link rel="stylesheet" href="../style/global.css" />
   <link rel="icon" href="../icon.ico" />
   <script defer src="./window.js"></script>
   <title>Bala Notes</title>
 </head>
 
-<body class="dark:text-blue-200 dark:dark-blue-background">
-  <div class="bg-gradient-to-b dark:from-blue-700 dark:to-blue-background from-gray-400 to-white">
+<body class="dark:text-blue-200 dark:dark-blue-background bg-gray-200">
+  <div class="
+        bg-gradient-to-b
+        dark:from-blue-700
+        dark:to-blue-background
+        from-white
+        to-gray-200
+      ">
     <div>
       <div class="dark:text-blue-200">
         <header class="flex justify-end">
@@ -22,8 +28,8 @@
             </svg>
           </div>
           <div class="transform pt-2 pb-2 pl-3 pr-3" id="max">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-500" fill="none" viewBox="0 0 24 24"
-              stroke="currentColor">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 dark:text-gray-500 text-gray-400" fill="none"
+              viewBox="0 0 24 24" stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                 d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z" />
             </svg>
@@ -45,8 +51,13 @@
         <h3 class="font-bold pl-5 text-4xl">Bala Notes</h3>
         <div class="pr-4 align-middle">
           <form class="inline-block pr-3">
-            <input style="width: 15rem" class="rounded-xl search dark:bg-gray-600 dark:text-blue-200" id="search_text"
-              type="search" placeholder="Search" aria-label="Search" />
+            <input style="width: 15rem" class="
+                  rounded-xl
+                  shadow-lg
+                  search
+                  dark:bg-gray-600
+                  dark:text-blue-200
+                " id="search_text" type="search" placeholder="Search" aria-label="Search" />
           </form>
           <div class="inline-block">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 pt-2" fill="none" id="theme" viewBox="0 0 24 24"
@@ -64,8 +75,8 @@
     <br />
     <div class="
           rounded-2xl
-          dark:from-indigo-900
-          dark:to-purple-900
+          dark:from-blue-800
+          dark:to-purple-800
           bg-gradient-to-tl
           from-purple-600
           to-pink-600
@@ -89,7 +100,7 @@
                 hover:shadow-xl
                 bg-gray-300
                 hover:bg-gray-100
-                dark:hover:bg-blue-900
+                dark:hover:bg-blue-600
                 dark:bg-blue-700
                 p-3
                 rounded-lg
@@ -99,9 +110,9 @@
           <button class="
                 font-semibold
                 hover:shadow-xl
-                bg-red-600
-                hover:bg-red-500
-                dark:hover:bg-red-900
+                bg-indigo-500
+                hover:bg-indigo-400
+                dark:hover:bg-red-600
                 dark:bg-red-700
                 p-3
                 rounded-lg
