--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="../style/global.css" />
   <link rel="icon" href="../icon.ico" />
   <script defer src="./window.js"></script>
+  <script defer src="./dialog.js"></script>
   <title>Bala Notes</title>
 </head>
 
@@ -98,8 +99,8 @@
           <button class="
                 font-semibold
                 hover:shadow-xl
-                bg-gray-300
-                hover:bg-gray-100
+                bg-red-600
+                hover:bg-red-400
                 dark:hover:bg-blue-600
                 dark:bg-blue-700
                 p-3
@@ -110,8 +111,8 @@
           <button class="
                 font-semibold
                 hover:shadow-xl
-                bg-indigo-500
-                hover:bg-indigo-400
+                bg-yellow-500
+                hover:bg-yellow-400
                 dark:hover:bg-red-600
                 dark:bg-red-700
                 p-3
