--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
         </div>
         <h3 class="font-bold pl-5 text-4xl">Bala Notes</h3>
         <div class="pr-4 align-middle">
-          <form class="inline-block pr-3">
+          <form class="float-left pr-3">
             <input style="width: 15rem" class="
                   rounded-xl
                   shadow-lg
@@ -60,11 +60,10 @@
                   dark:text-blue-200
                 " id="search_text" type="search" placeholder="Search" aria-label="Search" />
           </form>
-          <div class="inline-block">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 pt-2" fill="none" id="theme" viewBox="0 0 24 24"
-              stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z" />
+          <div class="float-left align-middle">
+            <div class="hover:bg-white rounded-lg dark:hover:bg-blue-600 p-2 mt-1" id="themeChange">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" id="theme"></svg>
+            </div>
             </svg>
           </div>
         </div>
@@ -99,8 +98,8 @@
           <button class="
                 font-semibold
                 hover:shadow-xl
-                bg-red-600
-                hover:bg-red-400
+                bg-yellow-500
+                hover:bg-yellow-400
                 dark:hover:bg-blue-600
                 dark:bg-blue-700
                 p-3
@@ -111,8 +110,8 @@
           <button class="
                 font-semibold
                 hover:shadow-xl
-                bg-yellow-500
-                hover:bg-yellow-400
+                bg-red-600
+                hover:bg-red-400
                 dark:hover:bg-red-600
                 dark:bg-red-700
                 p-3
