--- a/src/index.html
+++ b/src/index.html
@@ -98,8 +98,8 @@
           <button class="
                 font-semibold
                 hover:shadow-xl
-                bg-yellow-500
-                hover:bg-yellow-400
+                bg-indigo-500
+                hover:bg-indigo-400
                 dark:hover:bg-blue-600
                 dark:bg-blue-700
                 p-3
@@ -110,7 +110,7 @@
           <button class="
                 font-semibold
                 hover:shadow-xl
-                bg-red-600
+                bg-red-500
                 hover:bg-red-400
                 dark:hover:bg-red-600
                 dark:bg-red-700
