--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
                   dark:text-blue-200
                 " id="search_text" type="search" placeholder="Search" aria-label="Search" />
           </form>
-          <div class="float-left align-middle">
+          <div class="float-left align-middle cursor">
             <div class="hover:bg-white rounded-lg dark:hover:bg-blue-600 p-2 mt-1" id="themeChange">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" id="theme"></svg>
             </div>
