--- a/src/index.html
+++ b/src/index.html
@@ -12,31 +12,24 @@
 </head>
 
 <body class="dark:text-blue-200 dark:dark-blue-background bg-gray-200">
-  <div class="
-        bg-gradient-to-b
-        dark:from-blue-700
-        dark:to-blue-background
-        from-white
-        to-gray-200
-      ">
-    <div>
+  <div class="dark:dark-blue-background myNav bg-gray-200">
       <div class="dark:text-blue-200">
         <header class="flex justify-end">
-          <div class="pl-3 pr-3 hover:bg-blue-600 pt-2 pb-2" id="min">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+          <div class="pl-3 pr-3 dark:hover:bg-blue-900 hover:bg-gray-300 pt-2 pb-2" id="min">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
               stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18 12H6" />
             </svg>
           </div>
           <div class="transform pt-2 pb-2 pl-3 pr-3" id="max">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 dark:text-gray-500 text-gray-400" fill="none"
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 dark:text-gray-500 text-gray-400" fill="none"
               viewBox="0 0 24 24" stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                 d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z" />
             </svg>
           </div>
           <div class="pt-2 pb-2 hover:bg-red-600 pl-3 pr-3" id="close">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
               stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
             </svg>
@@ -44,7 +37,7 @@
         </header>
       </div>
     </div>
-    <nav class="myNav">
+    <nav class="dark:dark-blue-background bg-gray-200">
       <div class="pt-3 flex justify-between">
         <div class="pl-4">
           <img src="../icon.ico" alt="Logo" width="50" />
@@ -54,28 +47,24 @@
           <form class="float-left pr-3">
             <input style="width: 15rem" class="
                   rounded-xl
-                  shadow-lg
                   search
                   dark:bg-gray-600
                   dark:text-blue-200
                 " id="search_text" type="search" placeholder="Search" aria-label="Search" />
           </form>
           <div class="float-left align-middle cursor">
-            <div class="hover:bg-white rounded-lg dark:hover:bg-blue-600 p-2 mt-1" id="themeChange">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" id="theme"></svg>
+            <div class="hover:bg-white rounded-lg dark:hover:bg-blue-600 p-2 mt-t" id="themeChange">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" id="theme" class="h-4 w-4"></svg>
             </div>
             </svg>
           </div>
         </div>
-      </div>
     </nav>
   </div>
-  <div class="pr-60 pl-60 py-3">
-    <h1 id="welcome"></h1>
-    <br />
+  <div class="pr-60 pl-60 py-3 overflow-y-auto">
     <div class="
           rounded-2xl
-          dark:from-blue-800
+          dark:from-blue-700
           dark:to-purple-800
           bg-gradient-to-tl
           from-purple-600
