Update dynamic cards

--- a/src/index.html
+++ b/src/index.html
@@ -112,7 +112,7 @@
       </div>
     </div>
     <br />
-    <h2 class="font-bold text-3xl pb-2">Notes</h2>
+    <h2 class="font-bold text-3xl pb-2 columns">Notes</h2>
     <div id="notes" class="fill-row text-xl"></div>
   </div>
 </body>
